Added support for sel debugger New commands for type with no blur