@@ -16,24 +16,28 @@
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
 			<version>3.5.3</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-annotations</artifactId>
 			<version>3.5.1</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-artifact</artifactId>
 			<version>3.5.3</version>
+			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-core</artifactId>
 			<version>3.5.3</version>
+			<scope>provided</scope>
 		</dependency>
 	
 		<dependency>
@@ -45,28 +49,39 @@
 	
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+					<compilerArgs>
+						<arg>--add-modules</arg>
+						<arg>java.xml</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.compiler</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.6.2</version>
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
                 <executions>
 	                <execution>
-	                    <id>default-descriptor</id>
-	                    <goals>
-	                        <goal>descriptor</goal>
-	                    </goals>
-	                    <phase>process-classes</phase>
-	                </execution>
-	                <execution>
-	                    <id>help-descriptor</id>
-	                    <goals>
-	                        <goal>helpmojo</goal>
-	                    </goals>
-	                    <phase>process-classes</phase>
-	                </execution>
+						<id>default-descriptor</id>
+						<phase>process-classes</phase>
+					</execution>
+					<!-- if you want to generate help goal -->
+					<execution>
+						<id>help-goal</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
             	</executions>
             </plugin>
 		</plugins>
